--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.1",
     "axios": "^1.7.2",
     "ollama": "^0.5.6",
     "pinia": "^2.1.7",
